[package]
name = "markdown-viewer"
version = "0.1.0"
authors = ["noelzubin <noelzubinvictor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = { version = "0.5", default-features = false, features = ["simd"] }
web-view = "0.5.2"
horrorshow = "0.7.0"

